--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,7 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>LinganoreUMC | ADMIN</title>
+		<title>ADMIN • Lingnaore United Methodist Church</title>
 	</head>
 	<body>
 		<div id="root"></div>
